package it.polimi.moveflow.etichetta;

public interface Etichetta
{
    String generaTesto();
}
