package it.polimi.moveflow.etichetta;

import it.polimi.moveflow.model.Materiale;

public abstract class GeneratoreEtichetta {
    public abstract Etichetta creaEtichetta(Materiale materiale);
}
